policy/kyverno/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
  annotations:
    policies.kyverno.io/title: Disallow latest tag
    policies.kyverno.io/category: Supply Chain
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - demo
                - demo-app-dev
                - demo-app-uat
                - demo-app-prod
      validate:
        message: "Using the ':latest' tag is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
